--- a/images/readme
+++ b/images/readme
@@ -1,1 +1,1 @@
-This has the images from the word doc
+For anyone that struggled with the exams, being able to see the interesting choice of highlighted content, obscure knowledge and acronyms and general information shared during cyber scheme training  probably would have helped them
